# specforge-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4d51133d0bdd_initial.py  7cda2ae31576_add_google_oauth_fields_to_users.py  e925b8f6e000_add_projects_signals_chunks.py  ec842cb13056_add_pipeline_runs_opportunities.py  f21d9511bf46_replace_prd_text_with_prd_json.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  opportunity.py  pipeline_run.py  project.py  signal.py  signal_chunk.py  user.py
app/pipeline/: graph.py  state.py
app/pipeline/nodes/: cluster.py  generate.py  ingest.py  score.py
app/routers/: auth.py  opportunities.py  pipeline.py  prd.py  projects.py  signals.py
app/schemas/: auth.py  pipeline.py  prd.py  projects.py  signals.py
app/services/: chunking.py  embeddings.py  google_oauth.py  llm.py  pdf.py
tests/: conftest.py  test_auth.py
tests/test_api/: test_pipeline.py  test_projects.py  test_signals.py
tests/test_pipeline/: test_cluster.py  test_generate.py  test_ingest.py  test_score.py
