[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
